add models schemas

--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@
 # MONGO_DATABASE_PASSWORD = "root"
 # Application Configuration
 #APP_NAME=connect_memo
-MONGO_URL = mongodb+srv://hamdy:hamdydb@mongodb.4vz18.mongodb.net/Cookies-DB-iti45?retryWrites=true&w=majority&appName=MongoDB
+# MONGO_URL = mongodb+srv://hamdy:hamdydb@mongodb.4vz18.mongodb.net/Cookies-DB-iti45?retryWrites=true&w=majority&appName=MongoDB
+MONGO_URL =  mongodb+srv://omar1:omarreda2468@mongodb.4vz18.mongodb.net/IMDB?retryWrites=true&w=majority&appName=MongoDB
 HTTP_PORT=9000
 JWT_SECRET = "743e075da9c025b02a00163585bb6f81"
 JWT_EXPIRY = 1d
